[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menus/DeathScreen.gd" type="Script" id=1]
[ext_resource path="res://UI/SlickerTitleDynamicFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/SlickerTheme.tres" type="Theme" id=3]

[node name="DeathScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -137.5
margin_right = 137.5
margin_bottom = 48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Title"]
margin_right = 275.0
margin_bottom = 48.0

[node name="Control" type="Control" parent="Title/VBoxContainer"]
margin_right = 275.0

[node name="TitleText" type="Label" parent="Title/VBoxContainer"]
modulate = Color( 0.584314, 0, 0, 1 )
margin_top = 4.0
margin_right = 275.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = "YOU ARE DEAD"

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 125.0
margin_top = 51.0
margin_right = 194.0
margin_bottom = 129.0

[node name="Control" type="Control" parent="CenterContainer/VBoxContainer"]
margin_right = 69.0

[node name="StartGameButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 69.0
margin_bottom = 26.0
text = "Try Again"

[node name="MainMenuButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 69.0
margin_bottom = 52.0
text = "Main Menu"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 69.0
margin_bottom = 78.0
text = "Quit"
[connection signal="pressed" from="CenterContainer/VBoxContainer/StartGameButton" to="." method="_on_StartGameButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
